# GGFPS

./: .gitignore  GGFPS.py  KRR_GGFPS.py  README.md  gen_MACE_desc_DMAT.py  pyproject.toml
.github/workflows/: ci.yml
demos/: MD17_KRR_GGFPS.py
src/ggfps_gnn/: GGFPS.py  KRR_GGFPS.py  gen_train_from_DMAT.py
