[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ggfps-gnn"
version = "0.0.1"
description = "FPS / GGFPS sampling + pooled MACE descriptors for GNN training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "ase>=3.22",
  "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
